# SubsHarmonyTelegramBot

./: LICENSE  README.md  alembic.ini  pyproject.toml
data/: .env.template
src/core/: __init__.py  logger.py  logger_config.py  settings.py
src/database/: __init__.py  database.py
src/database/migrations/: env.py
src/database/migrations/versions/: 317337905111_.py
src/database/models/: __init__.py  base.py  models.py
src/database/queries/: __init__.py  queries.py
src/database/queries/delete/: __init__.py  delete.py
src/database/queries/insert/: __init__.py  insert.py
src/database/queries/select/: __init__.py  select.py
src/database/queries/update/: __init__.py  update.py
src/database/schemas/: __init__.py  add_schemas.py  base.py  rel_schemas.py  schemas.py
